fix: list color and spacing

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -62,10 +62,6 @@ body #app {
 		&:not(:first-child) {
 			margin-top: $spacing-100;
 		}
-
-		&::marker {
-			color: $rose-800;
-		}
 	}
 }
 
